# cython_examples

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
docs/: Doxyfile  Makefile  index.html
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  overview.html  readme.html  search.html
docs/html/_sources/: index.rst.txt  overview.rst.txt  readme.rst.txt
docs/html/doxygen/: annotated.html  classcpp_interface_space_1_1cpp_interface-members.html  classcpp_interface_space_1_1cpp_interface.html  classinterfacepackage_1_1interfacepackage_1_1myclass-members.html  classinterfacepackage_1_1interfacepackage_1_1myclass.html  classinterfacepackage_1_1interfacepackage_1_1py_cpp_interface.html  classtests_1_1test__interfacepackage_1_1_test_module.html  cpp_interface_8h_source.html  dir_115e10128306ba3ff48be84c8e676c82.html  dir_1ab31cb45db5038bdda41b72d8600e0e.html  dir_35365463843fc1c5257501de820c741b.html  dir_5651fc7cc47b698ddf67a74990f57352.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9cba3ccb450b89ac6f0c2a18abcbadf0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_da825f00bd7f8282c0b03518b0b3168f.html  (+6 more)
docs/source/: conf.py
include/: myClass.h
interfacepackage/: __init__.py  interfacepackage.pyx  temporarypack.py
mixed/tests/: genericTestSuite.cpp  test_interfacepackage.py
python/: myClass.pyx
sources/: CMakeLists.txt
sources/include/: cppInterface.h
sources/tests/: CMakeLists.txt
split/: setup.py
split/interfacepackage/: temporarypack.py
split/sources/: .gitignore
split/tests/: test_interfacepackage.py
src/: cppInterface.cpp  myClass.cpp
tests/: test_interfacepackage.py
(+11 files in other folders)
